3.1.4
-----
(RB=617238)
Made multiplexer returns correct HTTP status code (by throwing the right type of Exception) when encounter errors.

3.1.3
-----
(RB=619857)
Add HTTP status code in response body for ErrorResponse in certain formats.

(RB=618755)
Refactoring the d2config code for serviceGroup

3.1.2
------
(RB=618172)
Provide decouping of class exception and stack trace for certain client use cases.

3.1.1
------
(RB=613684)
Improve Rest.li client error message in handling non-JSON RestException.

3.1.0
------
(RB=615156)
Add streaming compressor and streaming compression filter. Note that
"snappy" encoding is no longer supported in streaming scenario because 
it requires full data in memory before encoding/decoding. Instead, we 
will be using "snappy-framed" encoding.

(RB=616718)
Backport timeout to AbstractR2Servlet

(RB=616123)
Invoke user callback immediately if netty write fails

3.0.2
------
(RB=607805)
Refactor ByteString to avoid extra copy in certain cases

(RB=615213)
Make root builder method spec available to request builder specs.

(RB=614365)
Correctly serialize typerefed ByteString in URI.

3.0.1
------
(RB=614300)
Allow ServiceGroup to specify clusters with coloVariants.

3.0.0
------
(RB=601892)
Refactor R2 message hierarchy

2.12.7
------
(RB=612350)
Make CookieUtil more robust.

2.12.6
------
(RB=611772)
Dummy version bump up to work around release issue.

2.12.5
------
(RB=607852)
Allow non-clusterVariant in ServiceGroup in d2.src.

(RB=609950)
Catch throwable when invoking callbacks in ZooKeeperAnnouncer#drain

2.12.4
------
(RB=606234)
Fix a bug in ZooKeeperConnectionManager where we didn't retry when
EphemeralStore failed to start.

2.12.3
------
(RB=599052)
Treat query/action parameters with default values as optional in client builders.

(RB=591044)
Address Multiplexer security concerns.
1. Disallow cookies to be passed in the individual requests.
2. Only whitelisted headers are allowed to be specified in the individual requests.